# dojo2

./: .env.example  .envrc  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  DESIGN.md  README.md  SPEC.md  bootstrap_spec.md  flake.nix  justfile  mvp_spec.md  opencode.json
api/: README.md  pyproject.toml
api/src/dojo/: __init__.py  aggregate_validation.py  benchmark_fixtures.py  benchmarks.py  clock.py  constants.py  database.py  fixture_data.py  google.py  importer.py  live_sheet_harness.py  migrations.py  money.py  scd.py  schema.py  service.py  sql.py  validation_cli.py
api/src/dojo/api/: __init__.py  health.py  main.py  models.py  routes.py  settings.py
api/src/dojo/sql/control/: set_timezone_utc.sql
api/src/dojo/sql/queries/: account_balances.sql  available_to_budget_transactions.sql  count_current_budget_bucket_by_id.sql  count_current_category_group_by_id.sql  current_account_by_id.sql  current_accounts.sql  current_allocations.sql  current_allocations_amount_date.sql  current_allocations_amount_only.sql  current_budget_account_setting_by_payment_category.sql  current_budget_account_settings.sql  current_categories.sql  current_categories_ordered.sql  current_category_by_id.sql  current_category_group_by_id.sql  current_category_groups.sql  current_category_groups_ordered.sql  current_net_worth_valuations.sql  current_net_worth_valuations_ordered.sql  current_transaction_by_id.sql  current_transactions.sql  duckdb_table_names.sql  (+25 more)
api/tests/: conftest.py  test_aggregate_validation.py  test_api_endpoints.py  test_benchmarks.py  test_budget_formulas.py  test_health.py  test_importer.py  test_migrations.py  test_money.py  test_properties.py  test_scd.py  test_settings.py
api/tests/architecture/: checkers.py  test_policy_checkers.py
api/tests/fixtures/: bad_money_schema.sql  bad_sql_fstring_source.py.txt
api/tests/support/: clock.py  database.py  scd_invariants.py
(+112 files in other folders)
