[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "dojo-api"
version = "0.1.0"
description = "dojo FastAPI skeleton"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "duckdb>=1.0.0,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "itsdangerous>=2.2.0,<3.0.0",
  "pytz>=2024.1,<2026.0",
  "uvicorn>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
]

[dependency-groups]
dev = [
  "hypothesis>=6.127.0,<7.0.0",
  "mypy>=1.10.0,<2.0.0",
  "pytest>=8.2.0,<9.0.0",
  "ruff>=0.5.0,<1.0.0",
]

[tool.hatch.build]
include = ["src/dojo/**/*.sql"]

[tool.hatch.build.targets.wheel]
packages = ["src/dojo"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
strict = true
packages = ["dojo"]
